# Hansei

./: .gitignore  app.js  index.js  package-lock.json  package.json
ai_engine/: GoEmotion_Classification.ipynb  clinical_knowledge_base.ipynb  goemotions_tokenizer.json  hansei_rag_knowledge_base.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
ai_engine/go_emotion_classification/: load_data.py
ai_engine/notebooks/: goemotions_testing.ipynb
ai_engine/src/: config.py  model.py  utils.py
ai_engine/src/models/: transformer.py
ai_engine/src/notebooks/: goemotions_testing.ipynb
ai_engine/src/process_data/: data_loader.py  data_utils.py  dataset.py  load_data.py  prepare.py  preprocess.py  torch_dataset.py
ai_engine/src/rag/: indexer.py  vector_db.py
ai_engine/src/training/: predict.py  train.py
backend/: app.js  package-lock.json  package.json  schema.sql  testdb.js
backend/controllers/: chatController.js  historyController.js  journalController.js  loginController.js  registerController.js  streakController.js  userController.js
backend/database/: db.js  queries.js
backend/middleware/: authenticate.js
backend/models/: userModel.js
backend/routes/: authRoutes.js  chatRoutes.js  historyRoutes.js  userRoutes.js
backend/utils/: crypto.js
controllers/: loginController.js  registerController.js  userController.js
database/: queries.js
frontend/: .gitignore  App.tsx  package-lock.json  package.json
frontend/src/api/: client.tsx
middleware/: authenticate.js
models/: loginModel.js
routes/: authRoutes.js  userRoutes.js
(+10 files in other folders)
